k8s/manifests/services/external/cadence.yaml
# cadence.perihelion.live -> cadence on phis4:3000
---
apiVersion: v1
kind: Service
metadata:
  name: cadence
  namespace: external
spec:
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: cadence
  namespace: external
  labels:
    kubernetes.io/service-name: cadence
addressType: IPv4
ports:
  - port: 3000
endpoints:
  - addresses: ["192.168.1.215"]
    conditions:
      ready: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cadence
  namespace: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cadence.perihelion.live`)
      kind: Rule
      services:
        - name: cadence
          port: 3000
      middlewares:
        - name: web-security-headers
  tls: {}
